# blog_backend

./: .gitignore  Cargo.toml  readme
src/: main.rs  routes.rs
src/auth/: jwt.rs  middleware.rs
src/db/: mod.rs
src/handlers/: auth_handler.rs  menu_handler.rs  mod.rs
src/routes/: mod.rs
src/routes/api/: menu.rs  mod.rs  post.rs  user.rs
src/routes/api/admin/: menu.rs  mod.rs  post.rs  user.rs
src/routes/auth/: login.rs  logout.rs  mod.rs
