[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.2"
chrono = "0.4.42"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = { version = "2.3.8", features = ["kv-rocksdb"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
